# soft_reminder

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  messages.json  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_users_timestamps_tz.py
src/app/: bootstrap.py  main.py  types.py
src/config/: constants.py  env.py
src/domain/: intents.py
src/domain/engagement/: service.py
src/domain/feelings/: service.py
src/domain/gratitude/: parser.py  service.py
src/domain/habits/: parser.py  service.py
src/domain/users/: service.py  session_service.py
src/domain/weekly_summary/: renderer.py  service.py
src/jobs/: daily_reminders.py  inactivity_check.py  weekly_summary.py
src/messaging/: message_engine.py
src/storage/: base.py  db.py  init_db.py  models.py
src/storage/repositories/: feelings_repository.py  gratitude_repository.py  habit_completion_repository.py  habit_repository.py  reminder_log_repository.py  session_repository.py  user_repository.py  weekly_summary_log_repository.py
src/telegram/: callback_handlers.py  command_handlers.py  keyboards.py  text_handlers.py
src/utils/: dates.py  text.py
tests/integration/: test_idempotency.py
tests/unit/: test_dates_week_range.py  test_gratitude_parser.py  test_intent_priority.py  test_tone_safety.py
