[project]
name = "telegram-habit-gratitude-bot"
version = "0.1.0"
description = "Psychologically safe Telegram bot with habits, gratitude journal and weekly summaries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiogram>=3.7.0",
  "SQLAlchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "APScheduler>=3.10.4",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
